<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- 红色背景布局 -->

    <RelativeLayout
        android:id="@+id/right_title"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:background="@color/red_title" >

        <ImageView
            android:id="@+id/left_button"
            android:layout_width="19dp"
            android:layout_height="21dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="17dp"
            android:src="@drawable/user" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ximen"
                android:textColor="@color/white_text"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:text="@string/swich_city"
                android:textColor="@color/white_text"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="19dp"
            android:layout_height="21dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="14dp"
            android:layout_marginTop="17dp"
            android:src="@drawable/search" />
    </RelativeLayout>
    <!-- gone不保留位置，不可见保留位置 -->
    <!-- 搜索框布局，默认不显示 -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/right_title"
        android:gravity="center"
        android:hint="@string/search_hint"
        android:textSize="15sp"
        android:visibility="gone" />
    <!-- radiogroup 布局 -->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/right_title"
        android:orientation="vertical" >
	<TabHost
    
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TabWidget
        android:id="@android:id/tabs"

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="fill_parent"
            android:layout_height="51dp"
            android:background="@color/tab_unselect"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/tab_coupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tab_select"
                android:button="@null"
                android:checked="true"
                android:text="@string/coupon_info"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/tab_dishs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tab_select"
                android:button="@null"
                android:text="@string/dish_recommend"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/tab_res"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tab_select"
                android:button="@null"
                android:text="@string/res_recommend"
                android:textColor="@color/text_color"
                android:textSize="14sp" />
        </RadioGroup>
         <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0"/>

        <LinearLayout
            android:id="@+id/onetab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
			<FrameLayout 
			    android:id="@+id/realcontent"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    >
			    
			</FrameLayout>
        </LinearLayout>
    
    </TabHost>
    </LinearLayout>
    <!-- 底部按钮 -->

    <Button
        android:layout_width="78dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rotation" />

</RelativeLayout>